CREATE TABLE IF NOT EXISTS transportistas (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre VARCHAR(120) NOT NULL,
    rut VARCHAR(20) NOT NULL UNIQUE,
    email_contacto VARCHAR(160) NOT NULL
);

CREATE TABLE IF NOT EXISTS pedidos (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    numero_pedido VARCHAR(40) NOT NULL UNIQUE,
    cliente_nombre VARCHAR(120) NOT NULL,
    direccion_destino VARCHAR(220) NOT NULL,
    comuna_destino VARCHAR(100) NOT NULL,
    descripcion_carga VARCHAR(300) NOT NULL,
    peso_kg DECIMAL(12, 2) NOT NULL CHECK (peso_kg > 0),
    fecha_pedido TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE IF NOT EXISTS guias_despacho (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    pedido_id BIGINT NOT NULL UNIQUE,
    transportista_id BIGINT NOT NULL,
    numero_guia VARCHAR(40) NOT NULL UNIQUE,
    nombre_archivo VARCHAR(160) NOT NULL,
    ruta_efs VARCHAR(500),
    bucket_s3 VARCHAR(120),
    key_s3 VARCHAR(500),
    fecha_emision TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    fecha_subida_s3 TIMESTAMP,
    estado VARCHAR(30) NOT NULL DEFAULT 'GENERADA',
    CONSTRAINT fk_guias_pedido
        FOREIGN KEY (pedido_id) REFERENCES pedidos (id)
        ON DELETE CASCADE,
    CONSTRAINT fk_guias_transportista
        FOREIGN KEY (transportista_id) REFERENCES transportistas (id)
);

CREATE INDEX IF NOT EXISTS idx_guias_transportista_fecha
    ON guias_despacho (transportista_id, fecha_emision);

CREATE INDEX IF NOT EXISTS idx_guias_key_s3
    ON guias_despacho (key_s3);
